// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SwipeableButton component snapshots matches snapshot with default props 1`] = `
<DocumentFragment>
  <div
    class="styles__SwipeableWrapper-sc-vpiolk-0 qIPIY"
  >
    <button
      aria-disabled="false"
      class="styles__StyledButton-sc-5pc2aq-1 fEzqKk primary "
      type="button"
    >
      <span
        class="styles__BtnChild-sc-5pc2aq-2 cBBqTe"
      >
        Click me!!
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`SwipeableButton component snapshots matches snapshot with primary style 1`] = `
<DocumentFragment>
  <div
    class="styles__SwipeableWrapper-sc-vpiolk-0 qIPIY"
  >
    <button
      aria-disabled="false"
      class="styles__StyledButton-sc-5pc2aq-1 fEzqKk primary "
      type="button"
    />
  </div>
</DocumentFragment>
`;
